criação de templates html

--- a/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/rodape.xhtml
+++ b/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/rodape.xhtml
@@ -6,5 +6,6 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 	<p:outputLabel value="#{msg['pages.comuns.rodape.footerText']}" />
-	<p:outputLabel value=" - #{msg['pages.comuns.rodape.allRightsReserved']}" />
+	<p:outputLabel
+		value=" - #{msg['pages.comuns.rodape.allRightsReserved']}" />
 </ui:composition>
