--- a/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/menuLateral.xhtml
+++ b/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/menuLateral.xhtml
@@ -8,20 +8,24 @@
 	xmlns:p="http://primefaces.org/ui">
 	<h:form>
 		<p:panelMenu>
-		    <p:submenu label="#{msg['pages.comuns.menuLateral.inicio']}" >
-			   <p:menuitem value="#{msg['pages.inicio.menu']}" url="inicio.xhtml" />
+			<p:submenu label="#{msg['pages.comuns.menuLateral.inicio']}">
+				<p:menuitem value="#{msg['pages.inicio.menu']}" url="inicio.xhtml" />
 			</p:submenu>
-		
+
 			<p:submenu label="#{msg['pages.comuns.menuLateral.gerencial']}">
-				<p:menuitem value="#{msg['pages.cadastroAluno.menu']}"      url="cadastroAluno.xhtml" />
-				<p:menuitem value="#{msg['pages.cadastroFornecedor.menu']}" url="cadastroFornecedor.xhtml" />
-				<p:menuitem value="#{msg['pages.cadastroProduto.menu']}" url="cadastroProduto.xhtml" />
-	       </p:submenu>
-					
+				<p:menuitem value="#{msg['pages.cadastroAluno.menu']}"
+					url="cadastroAluno.xhtml" />
+				<p:menuitem value="#{msg['pages.cadastroFornecedor.menu']}"
+					url="cadastroFornecedor.xhtml" />
+				<p:menuitem value="#{msg['pages.cadastroProduto.menu']}"
+					url="cadastroProduto.xhtml" />
+			</p:submenu>
+
 			<p:submenu label="#{msg['pages.comuns.menuLateral.options']}">
-				<p:menuitem value="#{msg['pages.linguagem.menu']}" url="linguagem.xhtml" />
-	       </p:submenu>
-		
+				<p:menuitem value="#{msg['pages.linguagem.menu']}"
+					url="linguagem.xhtml" />
+			</p:submenu>
+
 		</p:panelMenu>
 	</h:form>
 </ui:composition>
