--- a/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/menuLateral.xhtml
+++ b/prjFinalCadastroPedidos/src/main/webapp/paginas/comuns/menuLateral.xhtml
@@ -13,12 +13,14 @@
 			</p:submenu>
 
 			<p:submenu label="#{msg['pages.comuns.menuLateral.gerencial']}">
-				<p:menuitem value="#{msg['pages.cadastroAluno.menu']}"
-					url="cadastroAluno.xhtml" />
-				<p:menuitem value="#{msg['pages.cadastroFornecedor.menu']}"
-					url="cadastroFornecedor.xhtml" />
+				<p:menuitem value="#{msg['pages.cadastroCliente.menu']}"
+					url="cadastroCliente.xhtml" />
+				<p:menuitem value="#{msg['pages.cadastroPedido.menu']}"
+					url="cadastroPedido.xhtml" />
 				<p:menuitem value="#{msg['pages.cadastroProduto.menu']}"
 					url="cadastroProduto.xhtml" />
+				<p:menuitem value="#{msg['pages.cadastroVendedor.menu']}"
+					url="cadastroVendedor.xhtml" />
 			</p:submenu>
 
 			<p:submenu label="#{msg['pages.comuns.menuLateral.options']}">
